# OscarPredictions

./: .gitignore  ARCHITECTURE.md  ENTRYPOINTS.md  LICENSE  MANIFEST.in  MOVIES_OLD.csv  PARITY.md  README.md  _quarto.yml  actor_award_unparsed.csv  actor_awards.csv  actor_year_award_matrix.csv  actor_year_award_matrix.py  award_groups.py  award_regex.py  award_show_counts.csv  award_show_counts.py  award_show_to_group.csv  documentation.md  film_actors.csv  film_actors_award_totals.py  film_actors_awards_sums_up_to_that_point.csv  index.md  join_movie_to_actor.py  modeling.ipynb  movies.csv  movies_actors_eda.py  movies_eda.ipynb  movies_testing.csv  movies_with_cast_award_totals.csv  no_award_actors.csv  oscar_scrape.py  pyproject.toml  report.md  requirements.txt  scrape_actor_awards.py  scrape_actors.py  scrape_imdb_event.py  scrape_movies.py  sped_up_webscraping.py  (+6 more)
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
docs/: documentation.html  index.html  modeling.html  movies_eda.html  report.html  robots.txt  search.json  sitemap.xml  tutorial.html
docs/site/: documentation.html  index.html  report.html  tutorial.html
oscar_predictions/: __init__.py  __main__.py  actor_year_award_matrix.py  award_groups.py  award_regex.py  award_show_counts.py  bundled_data.py  cli.py  cliutil.py  config.py  csvutil.py  features.py  film_actors_award_totals.py  join_movie_to_actor.py  modeling.py  models.py  oscar_scrape.py  reset_workspace.py  scrape_actor_awards.py  scrape_actors.py  scrape_movies.py  sync.py  updates.py  workspace.py
oscar_predictions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
oscar_predictions/data/: __init__.py
oscar_predictions/data/base/: __init__.py  movies.csv  no_award_actors.csv
site/: architecture.md  documentation.md  index.md  report.md  tutorial.md  tutorial.qmd
site/tutorial_workspace/: actor_year_award_matrix.csv  film_actors.csv  film_actors_awards_sums_up_to_that_point.csv  movies.csv  movies_with_cast_award_totals.csv  no_award_actors.csv  predictions.csv  report.json
tests/: test_csvutil_and_regex.py  test_join_smoke.py  test_modeling_command.py  test_reset_workspace.py  test_sync_orchestrator.py  test_updates_logic.py  test_workspace_and_commands.py
(+2 files in other folders)
